--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "postpublish": "pinst --enable"
   },
   "dependencies": {
-    "@nuxt/kit": "3.0.0-rc.11",
+    "@nuxt/kit": "^3.0.0-rc.11",
     "chalk": "^5.1.2",
     "globby": "^13.1.2",
     "mime": "^3.0.0",
@@ -60,7 +60,7 @@
   },
   "devDependencies": {
     "@nuxt/module-builder": "^0.2.0",
-    "@nuxt/schema": "npm:@nuxt/schema-edge@3.0.0-rc.12-27765227.8f7a7ec",
+    "@nuxt/schema": "3.0.0-rc.11",
     "@nuxt/test-utils": "3.0.0-rc.11",
     "@nuxtjs/eslint-config-typescript": "^11.0.0",
     "@release-it/conventional-changelog": "^5.1.1",
