--- a/package.json
+++ b/package.json
@@ -50,22 +50,22 @@
     "postpublish": "pinst --enable"
   },
   "dependencies": {
-    "@nuxt/kit": "3.0.0-rc.11",
+    "@nuxt/kit": "3.0.0",
     "chalk": "^5.1.2",
     "globby": "^13.1.2",
     "mime": "^3.0.0",
     "pathe": "^1.0.0",
-    "ufo": "^0.8.6",
+    "ufo": "^1.0.1",
     "wbn": "^0.0.8"
   },
   "devDependencies": {
-    "@nuxt/module-builder": "^0.1.7",
-    "@nuxt/schema": "npm:@nuxt/schema-edge@3.0.0-rc.12-27763889.5e7dfc2",
-    "@nuxt/test-utils": "3.0.0-rc.11",
+    "@nuxt/module-builder": "^0.2.1",
+    "@nuxt/schema": "3.0.0",
+    "@nuxt/test-utils": "3.0.0",
     "@nuxtjs/eslint-config-typescript": "12.0.0",
     "@release-it/conventional-changelog": "5.1.1",
     "@types/mime": "3.0.1",
-    "@types/node": "18.11.9",
+    "@types/node": "18.11.10",
     "@types/serve-handler": "6.1.1",
     "@vitest/coverage-c8": "0.25.3",
     "c8": "7.12.0",
@@ -77,7 +77,7 @@
     "get-port-please": "2.6.1",
     "husky": "8.0.2",
     "lint-staged": "13.0.4",
-    "nuxt": "npm:nuxt3@3.0.0-rc.12-27763889.5e7dfc2",
+    "nuxt": "3.0.0",
     "pinst": "3.0.0",
     "prettier": "2.8.0",
     "release-it": "15.5.0",
