--- a/playground/package.json
+++ b/playground/package.json
@@ -6,7 +6,7 @@
     "dev": "nuxi build && echo 'Download bundle.wbn and open locally to test.' && npx serve dist"
   },
   "devDependencies": {
-    "nuxt": "^3.0.0-rc.11",
+    "nuxt": "^3.0.0",
     "nuxt-web-bundle": "latest"
   }
 }
