--- a/package.json
+++ b/package.json
@@ -67,8 +67,7 @@
     "@types/mime": "3.0.1",
     "@types/node": "18.16.17",
     "@types/serve-handler": "6.1.1",
-    "@vitest/coverage-c8": "0.31.4",
-    "c8": "7.14.0",
+    "@vitest/coverage-v8": "0.32.0",
     "conventional-changelog-conventionalcommits": "5.0.0",
     "eslint": "8.42.0",
     "eslint-config-prettier": "8.8.0",
@@ -83,7 +82,7 @@
     "release-it": "15.11.0",
     "serve-handler": "6.1.5",
     "typescript": "5.1.3",
-    "vitest": "0.31.4",
+    "vitest": "0.32.0",
     "vue": "3.3.4"
   },
   "resolutions": {
