--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "docs:dev": "nuxi dev docs",
     "docs:build": "nuxi generate docs",
     "lint": "pnpm lint:all:eslint && pnpm lint:all:prettier",
-    "lint:all:eslint": "pnpm lint:eslint --ext .ts,.js,.mjs,.cjs .",
+    "lint:all:eslint": "pnpm lint:eslint .",
     "lint:all:prettier": "pnpm lint:prettier \"{src,test}/**/*.{js,json,ts}\"",
     "lint:eslint": "eslint --fix",
     "lint:prettier": "prettier --write --log-level warn",
@@ -60,16 +60,13 @@
     "@nuxt/module-builder": "0.4.0",
     "@nuxt/schema": "3.5.3",
     "@nuxt/test-utils": "3.5.3",
-    "@nuxtjs/eslint-config-typescript": "12.1.0",
     "@types/mime": "3.0.4",
     "@types/node": "20.11.28",
     "@types/serve-handler": "6.1.4",
     "@vitest/coverage-v8": "0.34.6",
     "bumpp": "9.2.1",
     "conventional-changelog-conventionalcommits": "6.1.0",
-    "eslint": "8.57.0",
-    "eslint-config-prettier": "8.10.0",
-    "eslint-plugin-prettier": "5.1.3",
+    "eslint": "9.0.0",
     "expect-type": "0.17.3",
     "get-port-please": "3.1.2",
     "husky": "8.0.3",
@@ -79,7 +76,8 @@
     "serve-handler": "6.1.5",
     "typescript": "5.3.3",
     "vitest": "0.34.6",
-    "vue": "3.3.4"
+    "vue": "3.3.4",
+    "@nuxt/eslint-config": "0.3.5"
   },
   "resolutions": {
     "@nuxt/kit": "3.5.3",
