chore: remove prettier

--- a/package.json
+++ b/package.json
@@ -35,11 +35,9 @@
     "dev:prepare": "pnpm nuxt-module-build --stub && nuxi prepare playground",
     "docs:dev": "nuxi dev docs",
     "docs:build": "nuxi generate docs",
-    "lint": "pnpm lint:all:eslint && pnpm lint:all:prettier",
+    "lint": "pnpm lint:all:eslint",
     "lint:all:eslint": "pnpm lint:eslint .",
-    "lint:all:prettier": "pnpm lint:prettier \"{src,test}/**/*.{js,json,ts}\"",
     "lint:eslint": "eslint --fix",
-    "lint:prettier": "prettier --write --log-level warn",
     "prepack": "pnpm build",
     "prepare": "husky install",
     "prepublishOnly": "pnpm lint && pnpm test",
@@ -72,7 +70,6 @@
     "husky": "8.0.3",
     "lint-staged": "13.3.0",
     "nuxt": "3.5.3",
-    "prettier": "3.2.5",
     "serve-handler": "6.1.5",
     "typescript": "5.3.3",
     "vitest": "0.34.6",
