chore: run npm fix on `package.json`

--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "0.3.0",
   "license": "MIT",
   "description": "Generate web bundles with Nuxt",
-  "repository": "danielroe/nuxt-web-bundle",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/danielroe/nuxt-web-bundle.git"
+  },
   "keywords": [
     "nuxt",
     "module",
