--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "prepare": "husky install",
     "prepublishOnly": "pnpm lint && pnpm test",
     "release": "bumpp && pnpm publish",
-    "test": "vitest run",
+    "test": "vitest run --coverage",
     "test:types": "tsc --noEmit"
   },
   "dependencies": {
