--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,4 +61,5 @@ jobs:
         run: pnpm test:types
 
       - name: 🟩 Coverage
+        if: matrix.os != 'windows-latest'
         uses: codecov/codecov-action@v4
