--- a/package.json
+++ b/package.json
@@ -22,12 +22,18 @@
   "type": "module",
   "exports": {
     ".": {
-      "import": "./dist/module.mjs",
-      "require": "./dist/module.cjs"
+      "types": "./dist/types.d.mts",
+      "import": "./dist/module.mjs"
     }
   },
-  "main": "./dist/module.cjs",
-  "types": "./dist/types.d.ts",
+  "main": "./dist/module.mjs",
+  "typesVersions": {
+    "*": {
+      ".": [
+        "./dist/types.d.mts"
+      ]
+    }
+  },
   "files": [
     "dist"
   ],
@@ -59,7 +65,7 @@
   },
   "devDependencies": {
     "@nuxt/eslint-config": "1.0.1",
-    "@nuxt/module-builder": "0.8.4",
+    "@nuxt/module-builder": "1.0.0",
     "@nuxt/schema": "3.16.2",
     "@nuxt/test-utils": "3.17.2",
     "@types/mime": "4.0.0",
