--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
       - run: corepack enable
       - uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: lts/-1
           cache: "pnpm"
 
       - name: 📦 Install dependencies
@@ -42,7 +42,7 @@ jobs:
       - run: corepack enable
       - uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: lts/-1
           cache: "pnpm"
 
       - name: 📦 Install dependencies
